    until a shutdown of the owning context or font atlas.
  - The fact that handling of `FontDataOwnedByAtlas = false` was broken
    bypassed the issue altogether.

Other Changes:

- Fonts:
  - Fixed an issue related to EllipsisChar handling, while changing
    font loader or font loader flags dynamically in Style->Fonts menus.
- Textures:
  - Fixed a building issue when ImTextureID is defined as a struct.
  - Fixed displaying texture # in Metrics/Debugger window.
- Menus:
  - Fixed MenuItem() label position and BeginMenu() arrow/icon/popup positions,
    when used inside a line with a baseline offset.
- TreeNode:
  - Fixed highlight position when used inside a line with a large text baseline offset.
    (never quite worked in this situation; but then most of the time the text
    baseline offset ends up being zero or FramePadding.y for a given line).
- Tables:
  - Fixed an issue where a very thin scrolling table would advance parent layout
    slightly differently depending on its visibility (caused by a mismatch
    between hard minimum window size and table minimum size).
  - Fixed an issue where submitting non-integer row heights would eventually
    advance table parent layout by +0/+1 depending on its visibility.
  - Fixed losing stored display order when reducing column count or when .ini
    data has missing or duplicate values. (#9108, #4046)
- ColorEdit:
  - Added R/G/B/A color markers next to each component (enabled by default).
  - Added ImGuiColorEditFlags_NoColorMarkers to disable them.
  - Added style.ColorMarkerSize to configure width of color component markers.
- Sliders, Drags:
  - Added ImGuiSliderFlags_ColorMarkers to opt-in adding R/G/B/A color markers
    next to each components, in multi-components functions.
  - Added a way to select a specific marker color.
- Text, InputText:
  - Reworked word-wrapping logic:
    - Try to not wrap in the middle of contiguous punctuations. (#8139, #8439, #9094)